--- a/definition-list/css/styles.css
+++ b/definition-list/css/styles.css
@@ -1,1 +1,93 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+body {
+	font-family: Helvetica, Arial, sans-serif;
+	margin: 1em;
+}
+.menu-list {
+    padding:10px 0;
+    float:left;
+    width:304px;
+    border-width: 0 4px 0 4px;
+    border-left-style: solid;
+    border-right-style: solid;
+    border-image: linear-gradient(to bottom, rgb(200, 205, 210), rgba(0, 0, 0, 0)) 1 100%;
+    background-image: linear-gradient(to bottom, rgba(200, 205, 210,1) 0%, rgba(200, 205, 210,1) 0.15%, rgba(240,240,240,0.4) 1.5%, rgba(240,240,240,0) 100%);
+}
+.menu-list dl {
+	margin: 20px;
+	float: left;
+	width: 260px;
+}
+.menu-list dt {
+	letter-spacing: 1px;
+	color: #627081;
+	float: right;
+	width: 162px;
+}
+.menu-list dd {
+	font-size: 0.875em;
+	line-height: 1.6;
+	color: #666;
+}
+.menu-list img {
+	float: left;
+	margin: 0 8px 0 0;
+	padding: 4px;
+	background: #fff;
+	border: 1px solid #d9e0e6;
+	border-bottom-color: #c8cdd2;
+    border-right-color: #c8cdd2;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.menu-list dd + dd {
+	margin: 0 0 0 98px;
+}
+
+dl:nth-child(even) dt {
+	float: left;
+}
+
+dl:nth-child(even) img {
+	float: right;
+	margin: 0 0 0 8px;
+}
+dl:nth-child(even) dd + dd {
+	margin: 0 98px 0 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
