--- a/definition-list/css/styles.css
+++ b/definition-list/css/styles.css
@@ -1,63 +1,78 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 body {
 	font-family: Helvetica, Arial, sans-serif;
 	margin: 1em;
 }
 .menu-list {
-    padding:10px 0;
-    float:left;
-    width:304px;
+    position: relative;
+    padding: 10px;
+    float: left;
+    min-width: 304px; 
     border-width: 0 4px 0 4px;
     border-left-style: solid;
     border-right-style: solid;
     border-image: linear-gradient(to bottom, rgb(200, 205, 210), rgba(0, 0, 0, 0)) 1 100%;
-    background-image: linear-gradient(to bottom, rgba(200, 205, 210,1) 0%, rgba(200, 205, 210,1) 0.15%, rgba(240,240,240,0.4) 1.5%, rgba(240,240,240,0) 100%);
+    background: linear-gradient(to bottom, rgba(200, 205, 210,1) 0%, rgba(200, 205, 210,1) 1%, rgba(240,240,240,0.4) 1.5%, rgba(240,240,240,0) 100%);
 }
+
 .menu-list dl {
-	margin: 20px;
-	float: left;
-	width: 260px;
+    float: left;
+    width: 100%;
+    clear: both;
+    padding: 12px;
 }
+
 .menu-list dt {
-	letter-spacing: 1px;
-	color: #627081;
-	float: right;
-	width: 162px;
+    letter-spacing: 1px; 
+    color: #627081; 
+    float: right;
+    width:80%;
+    padding-bottom: 6px;
 }
-.menu-list dd {
-	font-size: 0.875em;
-	line-height: 1.6;
-	color: #666;
-}
-.menu-list img {
-	float: left;
-	margin: 0 8px 0 0;
-	padding: 4px;
-	background: #fff;
-	border: 1px solid #d9e0e6;
-	border-bottom-color: #c8cdd2;
-    border-right-color: #c8cdd2;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+
+.menu-list dt + dd {
+    width: 20%;
+    padding-right: 12px;
 }
 
 .menu-list dd + dd {
-	margin: 0 0 0 98px;
+    font-size: 0.875em;
+    line-height: 1.6; 
+    color: #666; 
+    float: right;
+    width: 80%;
 }
 
-dl:nth-child(even) dt {
-	float: left;
+.menu-list img {
+    width: 100%;
+    float:left;
+    padding: 4px;
+    border: 1px solid #d9e0e6;
+    border-bottom-color: #c8cdd2;
+    border-right-color: #c8cdd2;
+    background: #fff;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
-dl:nth-child(even) img {
-	float: right;
-	margin: 0 0 0 8px;
+.popover {
+	position: absolute;
+	top: 30%;
+	left: 30%;
+	width: 50%;
+	display: none;
 }
-dl:nth-child(even) dd + dd {
-	margin: 0 98px 0 0;
+.popover img {
+	width: 100%;
 }
+.showme {
+	display: block;
+}
+
+
 
 
 
